Ensures bulk action header is 2.5rem (40px) and not 2.25rem (36px) which causes the verticla shift.

--- a/src/components/BulkActionsHeader/bulkActionsHeader.scss
+++ b/src/components/BulkActionsHeader/bulkActionsHeader.scss
@@ -1,3 +1,7 @@
+.Layer__bulk-actions-header {
+  height: 2.5rem;
+}
+
 .Layer__bulk-actions-header__selection-container {
   height: 2.25rem;
   min-width: 11rem;
